--- a/src/www/index.html
+++ b/src/www/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Track Movement</title>
-  <meta name="description" content="Google's material design UI components built with React.">
+  <meta name="description" content="Description of mine and Kamil hardware project.">
 
   <!-- Use minimum-scale=1 to enable GPU rasterization -->
   <meta
